--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,19 @@
     <string name="app_name">PopularMovies</string>
     <string name="action_settings">Settings</string>
 
-    <!-- Label for the sort mode preference [CHAR LIMIT=30] -->
+    <!-- Label for the sort mode preferences [CHAR LIMIT=30] -->
     <string name="pref_sort_label">Sort Mode</string>
     <string name="pref_sort_label_most_popular">Most Popular</string>
     <string name="pref_sort_label_top_rated">Top Rated</string>
-    <string name="pref_sort_key" translatable="false">sort_type</string>
+    <string name="pref_sort_summary">Define sort mode</string>
+
+    <string name="pref_sort_key" translatable="false">sort_mode</string>
+    <string name="pref_sort_most_popular" translatable="false">most_popular</string>
+    <string name="pref_sort_top_rated" translatable="false">top_rated</string>
+
 
     <string name="title_movie_detail">Movie Details</string>
+    <string name="title_settings">Settings</string>
+    <string name="pref_sort_default">@string/pref_sort_most_popular</string>
+
 </resources>
